--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,11 +3,6 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-
-.App {
-  margin-top: 7em;
-}
-
-#food-search {
-  margin-top: 5em;
+li{
+	list-style-type: none;
 }
